Fixed all log errors

--- a/src/plugins/classic-ui/public/webcomponents/gamepad.html
+++ b/src/plugins/classic-ui/public/webcomponents/gamepad.html
@@ -20,7 +20,7 @@
   <template>
 
     <a href="/#" id="gamepad" class="{{ ! gamepadConected ? 'hidden' : '' }}">
-      <img id="gamepadPopover" src="../../../themes/OpenROV/img/gamepad.png" rel="popover">
+      <img id="gamepadPopover" src="img/gamepad.png" rel="popover">
     </a>
 
   </template>
