--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
@@ -26,21 +26,21 @@
 
       <iron-ajax
         auto
-        url='{{softwareUpdateCheckURL}}'
+        url='{{_softwareUpdateCheckURL}}'
         handle-as="json"
         last-response="{{data}}" //package version
         debounce-duration="300">
       </iron-ajax>
       <iron-ajax
         auto
-        url='{{currentVersionInfoURL}}'
+        url='{{_currentVersionInfoURL}}'
         handle-as="json"
         last-response="{{version}}" //package version
         debounce-duration="300">
       </iron-ajax>
       <iron-ajax
         auto
-        url='{{serialNumberURL}}'
+        url='{{_serialNumberURL}}'
         handle-as="json"
         last-response="{{sn}}" //package version
         debounce-duration="300">
@@ -69,6 +69,13 @@
               self.controlablePlugins = results;
             });
           }
+          //Delay the checks to prevent long holds on the xhttp client
+          setTimeout(function(){
+            this._softwareUpdateCheckURL = this.softwareUpdateCheckURL;
+            this._currentVersionInfoURL = this.currentVersionInfoURL;
+            this._serialNumberURL = this.serialNumberURL;
+            this._applyUpdateURL = this.applyUpdateURL;     
+          },10000)
         },
         registerEmitterHandlers: function(emitter){
           var self = this;
