--- a/src/plugins/classic-ui/public/webcomponents/classic-ui.html
+++ b/src/plugins/classic-ui/public/webcomponents/classic-ui.html
@@ -310,10 +310,10 @@ img.center {
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top nav-collapse">
   <div class="navbar-inner">
-    <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
+    <a class="brand" href="#"><img src="img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
     <ul class="nav" id="navtoolbar">
-      <li><a href="#"><img id="keyboardpopover" src="../../themes/OpenROV/img/keyboard.png" data-trigger="hover" data-container="html /deep/ #keyboardInstructions" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
-      <!--<li><a href="#"><img id="keyboardpopover" src="../../themes/OpenROV/img/keyboard.png" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>-->
+      <li><a href="#"><img id="keyboardpopover" src="img/keyboard.png" data-trigger="hover" data-container="html /deep/ #keyboardInstructions" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
+      <!--<li><a href="#"><img id="keyboardpopover" src="img/keyboard.png" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>-->
       <li><a href="#" id="servoTilt" ><orov-servo-tilt class="pull-left" event-emitter="{{eventEmitter}}"></orov-servo-tilt></a></li>
       <li><orov-external-brightness-indicator  class="pull-left"  event-emitter="{{eventEmitter}}"></orov-external-brightness-indicator></li>
       <li><rov-gamepad class="pull-left"></rov-gamepad></li>
