--- a/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../orov-behaviors/orov-behavior.html">
-<link rel="import" href="../mobile-ui/grid-menu/grid-menu.html">
-<link rel="import" href="../mobile-ui/grid-menu/grid-menu-button.html">
+<link rel="import" href="grid-menu/grid-menu.html">
+<link rel="import" href="grid-menu/grid-menu-button.html">
 <link rel="import" href="../fontawesome-iconset/fa-all.html">
 <link rel="import" href="orov-appletswitcher-behavior.html">
 <dom-module name="orov-appletswitcher">
