--- a/src/system-plugins/ui-manager/public/webcomponents/all-imports.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/all-imports.html
@@ -1,2 +1,7 @@
 <!-- all-imports.html -->
 <link rel="import" href="switch-behavior.html">
+<link rel="import" href="orov-panel-behavior.html">
+<link rel="import" href="orov-panel.html">
+<link rel="import" href="orov-widget-registry.html">
+<link rel="import" href="orov-appletswitcher-behavior.html">
+<link rel="import" href="orov-appletswitcher.html">
