--- a/src/system-plugins/ui-manager/public/webcomponents/index.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/index.html
@@ -19,7 +19,7 @@ Copyright (c) 2016 OpenROV Inc Authors. All rights reserved.
        match the folder name, add a src="&lt;main-component&gt;.html" attribute,
        where &lt;main-component&gt;.html" is a file that imports all of the
        components you want documented. -->
-  <iron-component-page src="switch-behavior.html"></iron-component-page>
+  <iron-component-page src="all-imports.html"></iron-component-page>
 
 </body>
 </html>
