--- a/src/plugins/externallights/public/webcomponents/orov-elight-switch-collection.html
+++ b/src/plugins/externallights/public/webcomponents/orov-elight-switch-collection.html
@@ -34,12 +34,13 @@
     },
     registerEmitterHandlers: function(emitter){
         //listen for things that indicate I have to add/remove items from the collection
+        
+        //This is currently hardcoded per the code it replaces. 
+        //TODO: Add messages that specify what external lights exist
+        //  and then dynamically add the elements.
+        this._addElement("orov-elight-switch",{index:0});
         this._addElement("orov-elight-switch",{index:1});
-        this._addElement("orov-elight-switch",{index:2});
-//        this.elights=[{index:1},{index:2}];
-//        if (this.eventEmitter!==undefined){
-//         this.eventEmitter.emit(this.widgetCollectionEventName,Polymer.dom(this).children);
-//       }        
+     
     }
   })
 })();
