--- a/src/system-plugins/ui-manager/public/webcomponents/orov-panel-behavior.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/orov-panel-behavior.html
@@ -8,11 +8,20 @@
   if(!(window.OROV)){window.OROV={}}
   if(!(window.OROV.behaviors)){window.OROV.behaviors={}}  
   var behaviors = window.OROV.behaviors;
+
+  /**
+   * Behavior for widget-panels.
+   * Temporarily stoping polymer tag as it is breaking the documentation parser
+   * @ polymerBehavior
+   * 
+   */      
   window.OROV.behaviors.oROVPanel = {
       properties: {
+        /* A comma delimited list of 'tags' that are used to match with widgets automatically */
         panelType:{type:String}
       },
       behaviors: [behaviors.oROVStandard],
+      /* Function passed to the widget-registry to find compatible widets. Defaults to matching on panelType */
      panelFilter: function(){
        var self=this;
        return function(element){
@@ -25,7 +34,7 @@
         return panelTypes.includes(element.defaultPanel);
        }
      },
-     processAvailableWidgets:function(widgets){
+     _processAvailableWidgets:function(widgets){
        var self=this;
        var defaultProperties={eventEmitter:this.eventEmitter};
        widgets.forEach(function(widget){
@@ -53,7 +62,7 @@
      },
      attached: function(){
         if(this.eventEmitter){
-          this.eventEmitter.emit('widget-registry-enumerate-widgets',this.panelFilter(),this.processAvailableWidgets.bind(this)); 
+          this.eventEmitter.emit('widget-registry-enumerate-widgets',this.panelFilter(),this._processAvailableWidgets.bind(this)); 
         }      
       }
     }
