Marked features as BETA

--- a/src/plugins/internet-stream/public/webcomponents/orov-streaming-switch.html
+++ b/src/plugins/internet-stream/public/webcomponents/orov-streaming-switch.html
@@ -18,7 +18,7 @@
     ready:function(){
         this.defaultPanel="flight-switches";
         this.shortName="STR";
-        this.description="Internet Live Streaming on/off";
+        this.description="(BETA) Internet Live Streaming on/off";
     },
     _handleSwitchChange:function(){
         if (this.$.toggle.checked){
