Updated all references of camera-tilt to camera-servo

--- a/src/beta-plugins/headsup-menu/public/webcomponents/orov-headsup-menu.html
+++ b/src/beta-plugins/headsup-menu/public/webcomponents/orov-headsup-menu.html
@@ -679,7 +679,7 @@
         behaviors: [orovbehaviors.oROVStandard],
         registerEmitterHandlers: function(emitter){
           var self = this;
-          emitter.on('plugin.cameraTilt.angle',function(angle){
+          emitter.on('plugin.cameraServo.currentPos',function(angle){
             self.servoAngle = angle;
           });
         },
