--- a/src/system-plugins/plugin-finder/public/webcomponents/orov-plugin-finder.html
+++ b/src/system-plugins/plugin-finder/public/webcomponents/orov-plugin-finder.html
@@ -73,7 +73,7 @@
         },
         registerEmitterHandlers: function(emitter){
           var self = this;
-//          emitter.on('plugin.cameraTilt.angle',function(angle){
+//          emitter.on('plugin.cameraServo.currentPos',function(angle){
 //            self.servoAngle = angle;
 //          });
         },
