--- a/src/plugins/camera-servo/public/webcomponents/orov-servo-tilt.html
+++ b/src/plugins/camera-servo/public/webcomponents/orov-servo-tilt.html
@@ -44,7 +44,7 @@
         },
         registerEmitterHandlers: function(emitter){
           var self = this;
-          emitter.withHistory.on('plugin.cameraTilt.angle',function(angle){
+          emitter.withHistory.on('plugin.cameraServo.currentPos',function(angle){
             self.servoAngle = angle;
           });
         }
